# openapi: '3.0.yml
@@ -4,6 +4,14 @@ info:
   version: "1.0"
 servers:
   - url: http://localhost:2222/api
+security:
+  - bearerAuth: []
+components:
+  securitySchemes:
+    auth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
 paths:
   /shop/get-all-products:
     get:
@@ -25,6 +33,8 @@ paths:
           description: OK
   /shop/add-product:
     post:
+      security:
+        - bearerAuth: []
       description: "create product"
       requestBody:
         content:
@@ -38,10 +48,22 @@ paths:
                   type: string
                 price:
                   type: integer
+                images:
+                  type: array
+                stock:
+                  type: integer
+                show:
+                  type: boolean
+                userId:
+                  type: integer
               required:
                 - title
                 - description
                 - price
+                - images
+                - stock
+                - show
+                - userId
       responses:
         "200":
           description: OK
@@ -66,6 +88,12 @@ paths:
                   type: string
                 price:
                   type: integer
+                images:
+                  type: array
+                stock:
+                  type: integer
+                show:
+                  type: boolean
 
       responses:
         "200":
@@ -79,6 +107,28 @@ paths:
           schema:
             type: integer
           required: true
+      responses:
+        "200":
+          description: OK
+  /auth/signup:
+    post:
+      description: ""
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+                role:
+                  type: string
+
+              required:
+                - email
+                - password
       responses:
         "200":
           description: OK
