# src/routes/AuthRoutes.ts
@@ -1,0 +1,8 @@
+import { Router } from "express";
+import { signup } from "../controllers/AuthControllers";
+
+const authRoutes = Router();
+
+authRoutes.post("/signup", signup);
+
+export default authRoutes;
